-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 3.2.0-beta1
-
None
-
Windows 7
-
d0428a05220ed0550dd84cdb8299a1fb37b0fe72
Creator has a Kit pointing to a (rather old) Qt 4 build.
It aborts at startup. Output is (including qDebug() of the offending file name
:
C:/Users/christian/dev/qt-4.8-oslo/mkspecs/features/
C:/Users/christian/dev/qt-4.8-oslo/mkspecs/win32-msvc2008/features/
C:/Users/christian/dev/qt-4.8-oslo/mkspecs/features/
/mkspecs/features/
C:/Users/christian/dev/qt-4.8-oslo/mkspecs/features/spec_pre.prf
c:/Users/christian/bin/sh.exe
:/qmake/features/sh.exe
ASSERT: "fileName.isEmpty() || isAbsolutePath(fileName)" in file C:\Users\christian\dev\qtcreator-3.2\src\shared\proparser\ioutils.cpp, line 50
| For Gerrit Dashboard: QTCREATORBUG-12528 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 88429,2 | consider qt resource paths absolute | 3.2 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
| 139127,2 | consider qt resource paths absolute | 5.6 | qt/qtbase | Status: MERGED | +2 | 0 |
| 144228,3 | consider qt resource paths absolute | 5.6 | qt/qttools | Status: MERGED | +2 | 0 |